# graph_structure

./: .gitignore  README.md  data_ingestion.py  environment.yml  topologies_theory.ipynb
experiments/dataloader/: sandbox.ipynb  wordnet_synsets.csv
experiments/neurips2024/: .gitignore  README.md
experiments/neurips2024/notebooks/: comparing_similarities.ipynb  controlled_topologies.ipynb  experiments_chisquare.ipynb  glove.ipynb  glove300.ipynb  glove300_cka.ipynb  hinton2015.ipynb  hypergeometric_bound.ipynb  library_demo.ipynb  theory_and_toy_problems.ipynb  topologies_theory.ipynb  zeroshot_clip.ipynb  zeroshot_clip_cka.ipynb
experiments/neurips2024/scripts/: download_glove.py
experiments/nngs_paper/: README.md
experiments/nngs_paper/notebooks/: blip_model.ipynb  comparing_similarities.ipynb  controlled_topologies.ipynb  experiments_chisquare.ipynb  glove.ipynb  glove300.ipynb  glove300_cka.ipynb  glove300_gulp.ipynb  glove300_nngs.ipynb  hinton2015.ipynb  hypergeometric_bound.ipynb  theory_and_toy_problems.ipynb  topologies_theory.ipynb  zeroshot_blip_imagenet_nngs.ipynb  zeroshot_clip.ipynb  zeroshot_clip_cifar100_cka.ipynb  zeroshot_clip_cifar100_nngs.ipynb  zeroshot_clip_cifar_100_gulp.ipynb  zeroshot_clip_cka.ipynb  zeroshot_clip_gulp.ipynb  zeroshot_clip_imagenet_cka.ipynb  (+2 more)
experiments/topology_theory/: topologies_theory.ipynb
notebooks/: soft_k.ipynb  topologies_theory.ipynb  zeroshot_clip.ipynb
package/: pyproject.toml
package/src/graph_structure/: __init__.py  graph_structure.py
package/tests/: test_sanity.py
scripts/: data_ingestion.py
(+5 files in other folders)
